...
    <SafeAreaProvider>
      <GestureHandlerRootView style={styles.root}>
        <I18nextProvider i18n={i18n}>
            <SafeAreaView style={styles.root}>
              <StatusBar barStyle={isDarkMode ? 'light-content' : 'dark-content'} />
              <ScrollView contentContainerStyle={styles.scroll}>
                <Text style={styles.heading}>Home Value</Text>
                <HomeValueScreen />
                <View style={styles.divider} />
                <Text style={styles.heading}>Home Equity</Text>
                <HomeEquityScreen />
                <View style={styles.divider} />
                <Text style={styles.heading}>Monthly Payment</Text>
...
